--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -386,14 +386,15 @@ crossorigin=""/>
 <div class="col-12" style="height: 10px;"></div>
 
 <div class="row col-12">
-  <button class="btn col-offset-3 col-6" type="button" data-toggle="modal" data-target="#partenaireCinquiemeSens"><img class="img-fluid  boutonclickable  min-height-80px max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></button>
+  <button class="btn col-6" type="button" data-toggle="modal" data-target="#partenaireCinquiemeSens"><img class="img-fluid  boutonclickable  min-height-80px max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></button>
+  <button class="btn col-6" type="button" data-toggle="modal" data-target="#partenaireCinquiemeSens"><img class="img-fluid  boutonclickable  min-height-80px max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></button>
 </div>  
       </div>
 
       <div class="col-12 col-lg-6">
-<div class="col-12" style="height: 10px;"></div>
   <p lang="fr"><b><i class="text-underline">Professionnels ayant participé à la base de données ScenTree</i></b> </p>
   <p lang="en"><b><i class="text-underline">Professionals who participated to the ScenTree database :</i></b> </p>
+  <div class="col-12" style="height: 10px;"></div>
   <uL>
     <li>ASTORRI Marc<i class="profession"><span lang="fr"> (Apprenti Parfumeur)</span><span lang="en"> (Ex-Perfumer Apprentice)</span></i></li>
     <li>CERVI Yohan<i class="profession"><span lang="fr"> (Directeur de la création chez MAELSTROM Parfumeurs)</span><span lang="en"> (Director of Creation at MAELSTROM Parfumeurs)</span></i></li>
