--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -52,7 +52,7 @@ crossorigin=""/>
     <button class="dropdown-item btn" type="button" data-toggle="modal" data-target="#lesContacts"><span lang="fr">Contacts</span><span lang="en">Contacts</span></button>
     <button class="dropdown-item btn" type="button" data-toggle="modal" data-target="#lesSources"><span lang="fr">Sources</span><span lang="en">Sources</span></button>
     <div class="btn-group btn-group-toggle" data-toggle="buttons">
-      <label class="btn btn-primary to_french_radio_input"><input type="radio" name="options" id="option1" autocomplete="off" checked />FR</label>
+      <label class="btn btn-primary to_french_radio_input"><input type="radio" name="options" id="option1" autocomplete="off" checked /><img src="../img/france.jpg" alt="ScenTree en français"></label>
       <label class="btn btn-primary to_english_radio_input"><input type="radio" name="options" id="option2" autocomplete="off" checked />EN</label>
     </div>
     <button class="dropdown-item btn" type="button" data-toggle="modal" data-target="#lesMentionsLegales"><span lang="fr">Mentions Légales</span><span lang="en">Legal Mentions</span></button>
@@ -149,7 +149,7 @@ crossorigin=""/>
 
 <div id="you_can_zoom">
         <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close" id="close_you_can_zoom"><span aria-hidden="true">&times;</span></button>
-	<p>Zommez et cliquez sur les descripteurs ou les ingrédients souhaités</p>
+  <p>Zommez et cliquez sur les descripteurs ou les ingrédients souhaités</p>
 </div>
 
 <div id="RGPD_warning" class="col-sm-10 col-md-10 col-lg-10 col-xl-10">
