--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -150,7 +150,7 @@ crossorigin=""/>
 <div id="mapblock" class="col-md-9 order-md-first p-0  h-100  fill2">
 
 <div id="you_can_zoom">
-        <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close" id="close_you_can_zoom"><span aria-hidden="true">&times;</span></button>
+        <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close" id="close_you_can_zoom" style="margin:2%;"><span aria-hidden="true">&times;</span></button>
   <p lang="fr">Zoomez et cliquez sur les descripteurs ou les ingrédients souhaités</p>
   <p lang="en">Zoom and click on the wanted descriptor or ingredient</p>
 </div>
