--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -78,9 +78,9 @@ crossorigin=""/>
 
 <div class="row h-25 align-items-start">
   <div class="clearfix w-100">
-    <button class="btn to_english_button text-in-color-brown float-right" type="button"><img src="../img/anglais.jpg" alt="ScenTree en français" class="drapeaulangue"></button>
+    <button class="btn to_english_button float-right drapeaulangue" type="button"><img src="../img/anglais.jpg" alt="ScenTree in english"></button>
     <button class="btn text-in-color-brown float-right px-0">/</button>
-    <button class="btn to_french_button text-in-color-brown float-right" type="button"><img src="../img/france.jpg" alt="ScenTree en français" class="drapeaulangue"></button>
+    <button class="btn to_french_button float-right drapeaulangue" type="button"><img src="../img/france.jpg" alt="ScenTree en français"></button>
   </div>
   <button class="btn" type="button" data-toggle="modal" data-target="#decouvrirScenTree"><img id="logo-image" class="img-fluid logomenu boutonclickable" src="../img/logon.png" alt="le logo de Scentree"></button>
 </div>
