--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -78,7 +78,7 @@ crossorigin=""/>
 
 <div class="row h-25 align-items-start">
   <div class="clearfix w-100">
-    <button class="btn to_english_button float-right" type="button"><img src="../img/anglais.jpg" alt="ScenTree in english" class="imgen"></button>
+    <button class="btn to_english_button float-right" type="button"><img src="../img/anglais.jpg" alt="ScenTree in english"></button>
     <button class="btn text-in-color-brown float-right px-0">/</button>
     <button class="btn to_french_button float-right" type="button"><img src="../img/france.jpg" alt="ScenTree en français"></button>
   </div>
