--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -1340,7 +1340,8 @@ crossorigin=""/>
   <p>Les standards émis par l’association peuvent limiter ou interdire l’utilisation de certains ingrédients de parfums, et permettent aux fabricants d’émettre un <b>certificat IFRA</b>. Ce dernier permet au fabricant d’assurer à son client que son produit est conforme aux standards de l’industrie. </p>
   <p>Depuis 2015, les standards à prendre en compte sont ceux du <b>48 th amendement</b>. Attention cependant, le 49 th arrive prochainement. </p>
 <p>Afin de vous fournir de plus amples informations sur la classification des produits finis dans les catégories ici, nous avons réunis les principaux produits dans ce tableau : </p>
-<div class="table-responsive-sm"><table>
+
+<div class="table-responsive-sm col-offset-1 col-10"><table>
    <caption class="caption"><span lang="fr">Liste des produits finis regroupés par catégories</span><span lang="en">List of finished products grouped by category</span></caption> 
         <tr>
             <th>Catégories</th>
