--- a/html/_/index.html
+++ b/html/_/index.html
@@ -110,7 +110,7 @@ crossorigin=""/>
   </div>    
 </div>
 
-<div class="row h-15 mt-5 align-items-end"  style="background-color:green;">
+<div class="row h-15 align-items-end"  style="background-color:green;">
   <div class="container-fluid text-center">
 	<div class="col-12 p-0 mb-3" style="background-color:white;">
         <a class="col-12 mt-3 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/newletter.html">
