--- a/html/_/index.html
+++ b/html/_/index.html
@@ -112,7 +112,7 @@ crossorigin=""/>
 
 <div class="row h-15 align-items-end"  style="background-color:green;">
   <div class="container-fluid text-center">
-	<div class="col-12 p-0 mt-5 mb-2" style="background-color:white;">
+	<div class="col-12 p-0 mt-4 mb-2" style="background-color:white;">
         <a class="col-12  m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/newletter.html">
           <span lang="fr">Newletter</span><span lang="en">Newletter</span>
         </a>
@@ -131,7 +131,7 @@ crossorigin=""/>
 	        <a class="fab fa-facebook-square ml-3" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
       </div>
     </div>
-   <div class="copyright m-top-10-percent mb-1 row  d-none d-sm-none d-md-block">
+   <div class="copyright m-top-10-percent row  d-none d-sm-none d-md-block">
       	<sup>©</sup> Copyright 2019 |  ScenTree  | All Rights Reserved |
    </div>
   </div>
