--- a/html/_/index.html
+++ b/html/_/index.html
@@ -57,10 +57,10 @@ crossorigin=""/>
     <a class="dropdown-item btn  save_map_status_on_leaving" role="button" href="../_/newletter.html"><span lang="fr">Newletter</span><span lang="en">Newletter</span></a>
     <a class="dropdown-item btn  save_map_status_on_leaving" role="button" href="../_/contacts.html"><span lang="fr">Contacts</span><span lang="en">Contacts</span></a>
     <a class="dropdown-item btn  save_map_status_on_leaving" role="button" href="../_/sources.html"><span lang="fr">Sources</span><span lang="en">Sources</span></a>
-    
-
     <button class="dropdown-item btn" type="button" data-toggle="modal" data-target="#lesMentionsLegales"><span lang="fr">Mentions Légales</span><span lang="en">Legal Mentions</span></button>
-    <a class="linkedIn_button" href="https://www.linkedin.com/company/scentree/"><img src="../img/LI-In-Bug.png" alt="vers notre linkedIn" class="img-fluid max-height-20px" /></a> <a class="instagram_button" href="https://www.instagram.com/scentree.co/"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid max-height-20px" /></a> <a class="twitter_button" href="https://www.twitter.com/Scentree1"><img src="../img/Twitter_Logo_Blue.png" alt="vers notre Twitter" class="img-fluid max-height-20px" /></a>
+    <a class="fab fa-linkedin ml-2" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
+    <a class="fab fa-instagram ml-3" href="https://www.instagram.com/scentree.co/" target="_blank"></a>
+	<a class="fab fa-facebook-square ml-3" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
   </div>
 </div>
 </nav>
