--- a/html/_/index.html
+++ b/html/_/index.html
@@ -106,7 +106,7 @@ crossorigin=""/>
 <div class="row align-items-start text-center">
   <!--Boutons support et news -->
   <div class="col">
-    <a class="btn mt-4 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr"><b>Ils nous soutiennent  </b></span><span lang="en">They support us  </span><!--<i class="fas fa-info-circle notif"></i>--></a>
+    <a class="btn mt-4 mb-4 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr"><b>Ils nous soutiennent  </b></span><span lang="en">They support us  </span><!--<i class="fas fa-info-circle notif"></i>--></a>
     <br>
     <a class="btn mt-1 mb-5 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/nouveautes.html"><span lang="fr"><b>Les nouveautés !</b></span><span lang="en">News from ScenTree !</span><!--<i class="fas fa-info-circle notif"></i>--></a>
   </div>    
