--- a/html/_/mentionslegales.html
+++ b/html/_/mentionslegales.html
@@ -32,8 +32,8 @@ crossorigin=""/>
 <body class="h-100">
 <main class="h-100">
 
-<div class="modal" tabindex="-1" role="dialog" id="lesMentionsLegales">
-<div class="modal-dialog modal-xl" role="document">
+<div class="modal fade in  my-modal show_modal_at_start go_to_main_page_after_closing_modal" tabindex="-1" role="dialog" id="lesContacts">
+<div class="modal-dialog modal-lg" role="document">
 <div class="modal-content">
 
 <div class="modal-header d-block">
