--- a/html/_/support.html
+++ b/html/_/support.html
@@ -174,7 +174,8 @@ crossorigin=""/>
   <span lang="en"> This project could not see the light without the particular support of few people. We wish to thank them here :</span>
 </p>
 
-  <div class="row col-12" style="background-color: blue;">
+<div class="row">
+  <div class="col-12" style="background-color: blue;">
     <div class="col-7 col-xs-12 entreprise">
        <p class="mt-3 m-0 p-0 text-center">
         <span lang="fr"><b><i>Sociétés partenaires</i></b> </span>
@@ -241,7 +242,7 @@ crossorigin=""/>
         </ul>
     </div>
   </div>
-
+</div>
 </div>
 
 
