--- a/html/_/support.html
+++ b/html/_/support.html
@@ -177,7 +177,7 @@ crossorigin=""/>
 <div class="row">
   <div class="col-12" style="background-color: blue;">
     <div class="row">
-    <div class="col-6 col-xs-12 entreprise" style="white;">
+    <div class="col-6 col-xs-12 entreprise" style="background-color: white;">
        <p class="mt-3 m-0 p-0 text-center">
         <span lang="fr"><b><i>Sociétés partenaires</i></b> </span>
         <span lang="en"><b><i>Partner companies</i></b> </span>
