--- a/html/_/support.html
+++ b/html/_/support.html
@@ -176,77 +176,75 @@ crossorigin=""/>
 
 <div class="row">
   <div class="col-12" style="background-color: blue;">
-    <div class="row">
-    <div class="col-6 col-xs-7 entreprise" style="background-color: white;">
-       <p class="mt-3 m-0 p-0 text-center">
-        <span lang="fr"><b><i>Sociétés partenaires</i></b> </span>
-        <span lang="en"><b><i>Partner companies</i></b> </span>
-      </p>
-      <p class="col-12 mt-3" style="background-color: grey;">
-         <a class="btn offset-1 col-4 logosupporter" role="button" href="../supporters/cinquieme_sens.html"><img class="img-fluid logomenu boutonclickable min-height-80px max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></a>
-      </p>
-    </div>
+    <div class="row"> 
+      <div class="col-6 col-xs-7 entreprise" style="background-color: white;">
+        <p class="mt-3 m-0 p-0 text-center">
+          <span lang="fr"><b><i>Sociétés partenaires</i></b> </span>
+          <span lang="en"><b><i>Partner companies</i></b> </span>
+        </p>
+        <p class="col-12 mt-3" style="background-color: grey;">
+           <a class="btn offset-1 col-4 logosupporter" role="button" href="../supporters/cinquieme_sens.html"><img class="img-fluid logomenu boutonclickable min-height-80px max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></a>
+        </p>
+      </div>
 
-
-    <div class="col-6 col-xs-6 particulier">
-      <p class="mt-3 m-0 p-0 text-center">
-        <span lang="fr"><b><i>Professionnels ayant participé à la base de données ScenTree</i></b> </span>
-        <span lang="en"><b><i>Professionals who participated to the ScenTree database :</i></b> </span>
-      </p>
-      <p>
-        <ul>
-          <li>ASTORRI Marc -<span lang="fr" class="profession"> (Apprenti Parfumeur)</span><span lang="en" class="profession"> (Ex-Perfumer Apprentice)</span></li>
-          <li>BUCHANAN Jessica -<span lang="fr" class="profession"> (Parfumeur indépendant chez 1000 Flowers)</span><span lang="en" class="profession"> (Perfumer Freelance at 1000 Flowers)</span></li>
-          <li>CERVI Yohan -<span lang="fr" class="profession"> (Directeur de la création chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Director of Creation at MAELSTROM Parfumeurs)</span></li>
-          <li>DECOLIN Clémence -<span lang="fr" class="profession"> (Evaluatrice Fine Fragrance)</span><span lang="en" class="profession"> (Fine Fragrance Evaluator)</span></li>
-          <li>DHORME Morgan -<span lang="fr" class="profession"> (Parfumeur Créateur – Chidho Cosmétiques)</span><span lang="en" class="profession"> (Perfumer at Chidho Cosmétiques)</span></li>
-          <li>DURIEZ Jean-Michel -<span lang="fr" class="profession"> (Parfumeur Créateur – Parfums Jean-Michel Duriez Paris)</span><span lang="en" class="profession"> (Perfumer at Parfums Jean-Michel Duriez Paris)</span></li>
-          <li>FALIU Juliette -<span lang="fr" class="profession"> (Consultante/Rédactrice – Le Nez Bavard)</span><span lang="en" class="profession"> (Consultant and Writer at Le Nez Bavard)</span></li>
-          <li class="nouveausupporter">FATTAL A.Elie -<span lang="fr" class="profession"> (Evaluateur Fine Fragrance Junior)</span><span lang="en" class="profession"> (Junior Evaluator Fine Fragrance)</span></li>
-          <li>FIZET-PREVOT Hélène -<span lang="fr" class="profession"> (Parfumeur indépendant chez HF PERFUMES)</span><span lang="en" class="profession"> (Perfumer Freelance at HF PERFUMES)</span></li>
-          <li>FRACHON Axelle -<span lang="fr" class="profession"> (Formatrice Parfum)</span><span lang="en" class="profession"> (Perfume Trainer)</span></li>
-          <li>LE FLEM Gabriel -<span lang="fr" class="profession"> (Chargé d'études)</span><span lang="en" class="profession"> (Study leaders)</span></li>
-          <li>LEMONNIER Aymeric -<span lang="fr" class="profession"> (Apprenti parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Perfumer intern at MAELSTROM Parfumeurs)</span></li>
-          <li>MORVAN Axel -<span lang="fr" class="profession"> (Parfumeur Analyste)</span><span lang="en" class="profession"> (Analyst Perfumer)</span></li>
-          <li>NORMAND Sophie -<span lang="fr" class="profession"> (Rédactrice - Formatrice Parfum)</span><span lang="en" class="profession"> (Writer - Perfume Trainer)</span></li>
-          <li>OROFINO Delphine -<span lang="fr" class="profession"> (Marketing de la Parfumerie et des Cosmétiques)</span><span lang="en" class="profession"> (Marketing of perfumes and cosmetics)</span></li>
-          <li>PROIA Stéphane -<span lang="fr" class="profession"> (Evaluateur Junior)</span><span lang="en" class="profession"> (Junior Evaluator)</span></li>
-          <li>RAYNAL Sabine - <span lang="fr" class="profession"> (Enseignante à l’ISIPCA)</span><span lang="en" class="profession"> (Teacher at ISIPCA)</span></li>
-          <li>REVILLARD Patrice - <span lang="fr" class="profession"> (Co-fondateur et Parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Co-Founder and Perfumer at MAELSTROM Parfumeurs)</span></li>
-          <li>TAMEN Jeremy -<span lang="fr" class="profession"> (Formateur expert dans les Fragrances du thé)</span><span lang="en" class="profession"> (Trainer - Tea fragrances expert)</span></li>
-          <li>VILLEPREUX Céline -<span lang="fr" class="profession"> (Experte Matières Premières – Firmenich)</span><span lang="en" class="profession"> (Raw Materials Expert at Firmenich)</span></li>
-        </ul>
-      </p>
-      <p class="mt-3 m-0 p-0 text-center">
-        <span lang="fr"><b><i>Développement informatique</i></b> </span>
-        <span lang="en"><b><i>Informatics development</i></b> </span>
-      </p>
-        <ul>
-          <li>JACQUELINET Julien </li>
-          <li>BAUD Maxime</li>
-          <li>DE VIENNE Damien</li>
-        </ul>
-      <p class="mt-3 m-0 p-0 text-center">
-        <span lang="fr"><b><i>Responsable mentions légales et juridiques</i></b> </span>
-        <span lang="en"><b><i>Legal and juridical mentions</i></b> </span>
-      </p>
-        <ul>
-          <li>VASKOU Marie</li>
-        </ul>
-      <p class="mt-3 m-0 p-0 text-center">
-        <span lang="fr"><b><i>Graphismes, visuels et <a href="video.html">vidéo </a></i></b> </span>
-        <span lang="en"><b><i>Graphism, visuals and <a href="video.html">video </a></i></b> </span>
-      </p>
-        <ul>
-          <li>ERCOLANELLI Clara (Logo)</li>
-          <li>SHOGUN SHOOTER (Vidéo)</li>
-        </ul>
+      <div class="col-6 col-xs-7 particulier" style="background-color: yellow;">
+        <p class="mt-3 m-0 p-0 text-center">
+          <span lang="fr"><b><i>Professionnels ayant participé à la base de données ScenTree</i></b> </span>
+          <span lang="en"><b><i>Professionals who participated to the ScenTree database :</i></b> </span>
+        </p>
+        <p>
+          <ul>
+            <li>ASTORRI Marc -<span lang="fr" class="profession"> (Apprenti Parfumeur)</span><span lang="en" class="profession"> (Ex-Perfumer Apprentice)</span></li>
+            <li>BUCHANAN Jessica -<span lang="fr" class="profession"> (Parfumeur indépendant chez 1000 Flowers)</span><span lang="en" class="profession"> (Perfumer Freelance at 1000 Flowers)</span></li>
+            <li>CERVI Yohan -<span lang="fr" class="profession"> (Directeur de la création chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Director of Creation at MAELSTROM Parfumeurs)</span></li>
+            <li>DECOLIN Clémence -<span lang="fr" class="profession"> (Evaluatrice Fine Fragrance)</span><span lang="en" class="profession"> (Fine Fragrance Evaluator)</span></li>
+            <li>DHORME Morgan -<span lang="fr" class="profession"> (Parfumeur Créateur – Chidho Cosmétiques)</span><span lang="en" class="profession"> (Perfumer at Chidho Cosmétiques)</span></li>
+            <li>DURIEZ Jean-Michel -<span lang="fr" class="profession"> (Parfumeur Créateur – Parfums Jean-Michel Duriez Paris)</span><span lang="en" class="profession"> (Perfumer at Parfums Jean-Michel Duriez Paris)</span></li>
+            <li>FALIU Juliette -<span lang="fr" class="profession"> (Consultante/Rédactrice – Le Nez Bavard)</span><span lang="en" class="profession"> (Consultant and Writer at Le Nez Bavard)</span></li>
+            <li class="nouveausupporter">FATTAL A.Elie -<span lang="fr" class="profession"> (Evaluateur Fine Fragrance Junior)</span><span lang="en" class="profession"> (Junior Evaluator Fine Fragrance)</span></li>
+            <li>FIZET-PREVOT Hélène -<span lang="fr" class="profession"> (Parfumeur indépendant chez HF PERFUMES)</span><span lang="en" class="profession"> (Perfumer Freelance at HF PERFUMES)</span></li>
+            <li>FRACHON Axelle -<span lang="fr" class="profession"> (Formatrice Parfum)</span><span lang="en" class="profession"> (Perfume Trainer)</span></li>
+            <li>LE FLEM Gabriel -<span lang="fr" class="profession"> (Chargé d'études)</span><span lang="en" class="profession"> (Study leaders)</span></li>
+            <li>LEMONNIER Aymeric -<span lang="fr" class="profession"> (Apprenti parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Perfumer intern at MAELSTROM Parfumeurs)</span></li>
+            <li>MORVAN Axel -<span lang="fr" class="profession"> (Parfumeur Analyste)</span><span lang="en" class="profession"> (Analyst Perfumer)</span></li>
+            <li>NORMAND Sophie -<span lang="fr" class="profession"> (Rédactrice - Formatrice Parfum)</span><span lang="en" class="profession"> (Writer - Perfume Trainer)</span></li>
+            <li>OROFINO Delphine -<span lang="fr" class="profession"> (Marketing de la Parfumerie et des Cosmétiques)</span><span lang="en" class="profession"> (Marketing of perfumes and cosmetics)</span></li>
+            <li>PROIA Stéphane -<span lang="fr" class="profession"> (Evaluateur Junior)</span><span lang="en" class="profession"> (Junior Evaluator)</span></li>
+            <li>RAYNAL Sabine - <span lang="fr" class="profession"> (Enseignante à l’ISIPCA)</span><span lang="en" class="profession"> (Teacher at ISIPCA)</span></li>
+            <li>REVILLARD Patrice - <span lang="fr" class="profession"> (Co-fondateur et Parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Co-Founder and Perfumer at MAELSTROM Parfumeurs)</span></li>
+            <li>TAMEN Jeremy -<span lang="fr" class="profession"> (Formateur expert dans les Fragrances du thé)</span><span lang="en" class="profession"> (Trainer - Tea fragrances expert)</span></li>
+            <li>VILLEPREUX Céline -<span lang="fr" class="profession"> (Experte Matières Premières – Firmenich)</span><span lang="en" class="profession"> (Raw Materials Expert at Firmenich)</span></li>
+          </ul>
+        </p>
+        <p class="mt-3 m-0 p-0 text-center">
+          <span lang="fr"><b><i>Développement informatique</i></b> </span>
+          <span lang="en"><b><i>Informatics development</i></b> </span>
+        </p>
+          <ul>
+            <li>JACQUELINET Julien </li>
+            <li>BAUD Maxime</li>
+            <li>DE VIENNE Damien</li>
+          </ul>
+        <p class="mt-3 m-0 p-0 text-center">
+          <span lang="fr"><b><i>Responsable mentions légales et juridiques</i></b> </span>
+          <span lang="en"><b><i>Legal and juridical mentions</i></b> </span>
+        </p>
+          <ul>
+            <li>VASKOU Marie</li>
+          </ul>
+        <p class="mt-3 m-0 p-0 text-center">
+          <span lang="fr"><b><i>Graphismes, visuels et <a href="video.html">vidéo </a></i></b> </span>
+          <span lang="en"><b><i>Graphism, visuals and <a href="video.html">video </a></i></b> </span>
+        </p>
+          <ul>
+            <li>ERCOLANELLI Clara (Logo)</li>
+            <li>SHOGUN SHOOTER (Vidéo)</li>
+          </ul>
+      </div>
     </div>
-  </div>
-</div>  
+  </div>  
 </div>
 </div>
-
 
 </div>
 </div>
