--- a/html/_/support.html
+++ b/html/_/support.html
@@ -175,9 +175,9 @@ crossorigin=""/>
 </p>
 
 <div class="row">
-  <div class="col-12" style="background-color: blue;">
+  <div class="col-12 col-xs-12" style="background-color: blue;">
     <div class="row"> 
-      <div class="col-6 col-xs-7 entreprise" style="background-color: white;">
+      <div class="col-6 col-xs-12 entreprise" style="background-color: white;">
         <p class="mt-3 m-0 p-0 text-center">
           <span lang="fr"><b><i>Sociétés partenaires</i></b> </span>
           <span lang="en"><b><i>Partner companies</i></b> </span>
@@ -187,7 +187,7 @@ crossorigin=""/>
         </p>
       </div>
 
-      <div class="col-6 col-xs-7 particulier" style="background-color: yellow;">
+      <div class="col-6 col-xs-12 particulier" style="background-color: yellow;">
         <p class="mt-3 m-0 p-0 text-center">
           <span lang="fr"><b><i>Professionnels ayant participé à la base de données ScenTree</i></b> </span>
           <span lang="en"><b><i>Professionals who participated to the ScenTree database :</i></b> </span>
