--- a/html/_/support.html
+++ b/html/_/support.html
@@ -183,7 +183,7 @@ crossorigin=""/>
           <span lang="en"><b><i>Partner companies</i></b> </span>
         </p>
         <p class="col-12 mt-3">
-           <a class="btn offset-1 col-4 logosupporter" role="button" href="../supporters/cinquieme_sens.html"><img class="img-fluid logomenu boutonclickable min-height-80px max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></a>
+           <a class="btn offset-1 col-4 col-xs-12 logosupporter" role="button" href="../supporters/cinquieme_sens.html"><img class="img-fluid logomenu boutonclickable min-height-80px max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></a>
         </p>
       </div>
 
